--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>io.lucian</groupId>
     <artifactId>maven-release</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.2</version>
     <name>maven-release</name>
     <description>Maven Release POC</description>
 
@@ -48,7 +48,7 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:lucianmachado/maven-release-poc.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>maven-release-0.0.2</tag>
   </scm>
 
 </project>
